Fix clinical data counts query/filter using new derived table (#10833)